Add a simple command line flag parser

--- a/fileio/Makefile
+++ b/fileio/Makefile
@@ -1,12 +1,15 @@
 
 clean: 
-	rm -f main
+	rm -f main csvp
 
 build:
-	gcc -o main main.c csv_parser.c logger.c -Wall
+	gcc -o csvp main.c csv_parser.c logger.c -Wall
 
+
+rundata: clean build
+	./csvp data.csv -l error
 
 run: clean build
-	./main
+	./csvp
 
 
