--- a/fileio/Makefile
+++ b/fileio/Makefile
@@ -10,7 +10,7 @@ run-dummydata: clean build
 	./csvp data.csv -l debug
 
 run-findata: clean build
-	./csvp fin_survey.csv -l error
+	./csvp fin_survey.csv -l trace
 
 run: clean build
 	./csvp
